# mycpplib

./: .gitignore  CMakeLists.txt  test.cpp
include/: CMakeLists.txt  autolock.h  mempool.h  unique_fd.h  unix_error.h
include/mycpp/: autolock.h  unix_error.h
src/: CMakeLists.txt  autolock.cpp  mempool.cpp  unix_error.cpp
