cmake_minimum_required(VERSION 2.6)
project(mycpplib)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
add_subdirectory(src)
add_subdirectory(include)
#build test
include_directories(${CMAKE_SOURCE_DIR}/include)
aux_source_directory(src SRC_FILES)
add_executable(mytest test.cpp ${SRC_FILES})
target_link_libraries(mytest pthread gtest rt)
set_target_properties(mytest PROPERTIES COMPILE_FLAGS "-DGTEST_TEST")
